# notes

./: .gitignore  404.html  README.md  extra.css  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: mkdocs-deploy.yml
css/: custom.css  flink.css  giscus.css
css/cards/: cards.css
docs/: index.md
docs/css/cards/: base.css
docs/js/: scheme.js  toc.js
docs/philosophy/: index.md
docs/philosophy/ideology/: 校友初创实习体会.md
docs/philosophy/values/: 世界如何诞生.md  人是应该为了他人而活.md
docs/summaries/: index.md
docs/summaries/2025/weekly/: s2_11-w10.md  s2_12-w11.md
docs/tags/: index.md
overrides/partials/: comments.html  copyright.html
philosophy/: index.html
philosophy/ideology/大三冬的拖延/: index.html
philosophy/ideology/校友初创实习体会/: index.html
philosophy/values/世界如何诞生/: index.html
philosophy/values/人是应该为了他人而活/: index.html
search/: search_index.json
summaries/: index.html
summaries/2025/weekly/s2_11-w10/: index.html
summaries/2025/weekly/s2_12-w11/: index.html
tags/: index.html
